add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/protoreceiver")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/protowriter")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/environmentrequester")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/protoreplier")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/protorequester")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/protoregister")
